20240121 코드 리팩토링