@@ -1,13 +1,12 @@
 package com.miracle.miraclemorningback.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.miracle.miraclemorningback.dto.LoginResultDto;
+import com.miracle.miraclemorningback.dto.TokenDto;
 import com.miracle.miraclemorningback.dto.MemberDeleteSuccessResponseDto;
 import com.miracle.miraclemorningback.dto.MemberRequestDto;
 import com.miracle.miraclemorningback.dto.MemberResponseDto;
@@ -32,39 +31,47 @@ public class MemberService {
         @Transactional(readOnly = true)
         public List<MemberResponseDto> getMembers() {
 
-                return memberRepository.findAll().stream()
-                                .map(memberEntity -> MemberResponseDto.builder().memberId(memberEntity.getMemberId())
-                                                .memberName(memberEntity.getMemberName())
-                                                .password(memberEntity.getPassword())
-                                                .role(memberEntity.getRole())
-                                                .createdAt(memberEntity.getCreatedAt()).build())
-                                .collect(Collectors.toList());
+                return memberRepository.findAll().stream().map(memberEntity -> MemberResponseDto.builder()
+                                .memberId(memberEntity.getMemberId())
+                                .memberName(memberEntity.getMemberName())
+                                .password(memberEntity.getPassword())
+                                .role(memberEntity.getRole())
+                                .createdAt(memberEntity.getCreatedAt())
+                                .build())
+                                .toList();
         }
 
         // 회원 등록
         @Transactional
         public MemberResponseDto registerMember(MemberRequestDto requestDto) {
-                MemberEntity memberEntity = MemberEntity.builder().memberName(requestDto.getMemberName())
-                                .password(requestDto.getPassword()).role(Role.ROLE_TEMPORARY_USER).build();
+                MemberEntity memberEntity = MemberEntity.builder()
+                                .memberName(requestDto.getMemberName())
+                                .password(requestDto.getPassword())
+                                .role(Role.ROLE_TEMPORARY_USER)
+                                .build();
 
                 memberRepository.save(memberEntity);
 
-                return MemberResponseDto.builder().memberId(memberEntity.getMemberId())
+                return MemberResponseDto.builder()
+                                .memberId(memberEntity.getMemberId())
                                 .memberName(memberEntity.getMemberName())
                                 .password(memberEntity.getPassword())
-                                .role(Role.ROLE_TEMPORARY_USER)
-                                .createdAt(memberEntity.getCreatedAt()).build();
+                                .role(memberEntity.getRole())
+                                .createdAt(memberEntity.getCreatedAt())
+                                .build();
         }
 
         // 특정 회원 검색
         @Transactional
         public MemberResponseDto getMember(String memberName) {
                 return memberRepository.findByMemberName(memberName)
-                                .map(memberEntity -> MemberResponseDto.builder().memberId(memberEntity.getMemberId())
+                                .map(memberEntity -> MemberResponseDto.builder()
+                                                .memberId(memberEntity.getMemberId())
                                                 .memberName(memberEntity.getMemberName())
                                                 .password(memberEntity.getPassword())
                                                 .role(memberEntity.getRole())
-                                                .createdAt(memberEntity.getCreatedAt()).build())
+                                                .createdAt(memberEntity.getCreatedAt())
+                                                .build())
                                 .orElseThrow(
                                                 // 사용자명이 존재하지 않으면 예외 처리
                                                 () -> new IllegalArgumentException("존재하지 않은 사용자입니다."));
@@ -84,11 +91,13 @@ public class MemberService {
 
                 memberRepository.updateMemberName(memberName, requestDto.getMemberName());
 
-                return MemberResponseDto.builder().memberId(memberEntity.getMemberId())
+                return MemberResponseDto.builder()
+                                .memberId(memberEntity.getMemberId())
                                 .memberName(memberEntity.getMemberName())
                                 .password(memberEntity.getPassword())
                                 .role(memberEntity.getRole())
-                                .createdAt(memberEntity.getCreatedAt()).build();
+                                .createdAt(memberEntity.getCreatedAt())
+                                .build();
         }
 
         // 회원 삭제
@@ -110,7 +119,7 @@ public class MemberService {
 
         // 로그인
         @Transactional
-        public LoginResultDto loginMember(MemberRequestDto requestDto) throws Exception {
+        public TokenDto loginMember(MemberRequestDto requestDto) throws Exception {
                 MemberEntity memberEntity = memberRepository.findByMemberName(requestDto.getMemberName()).orElseThrow(
                                 // 사용자명이 일치하지 않으면 예외 처리
                                 () -> new IllegalArgumentException("존재하지 않은 사용자입니다."));
@@ -120,10 +129,12 @@ public class MemberService {
                         throw new Exception("비밀번호가 일치하지 않습니다.");
                 }
 
-                LoginResultDto loginResultDto = LoginResultDto.builder().token(
-                                jwtTokenProvider.generateToken(memberEntity.getMemberName(), memberEntity.getRole()))
+                TokenDto tokenDto = TokenDto.builder()
+                                .memberName(memberEntity.getMemberName())
+                                .accessToken(jwtTokenProvider.generateToken(memberEntity.getMemberName(),
+                                                memberEntity.getRole()))
                                 .build();
 
-                return loginResultDto;
+                return tokenDto;
         }
 }
